--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsmediatags": "^3.9.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "nodemon": "^2.0.19"
